# ScyPro_coursework_7_habittracker

./: .coverage  .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habits_send_next_time_alter_habits_author_and_more.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
